--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,19 @@
     border: none;
 }
 body{
-    font-family: alkatra, sans-serif;
+    font-family: Edu NSW ACT Foundation, sans-serif;
     font-weight: 400;
+    color: #3a3a3a;
+}
+
+/*headings and logo*/
+h1, h2 {
+    font-family: Alkatra, sans-serif;
+    letter-spacing: 2px;
+    color: #252525;
+}
+
+#logo {
+    float: left;
+    font-size: 280%;
 }
