--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,3 +22,28 @@ h1, h2 {
     float: left;
     font-size: 280%;
 }
+
+/*navigation links*/
+#menu, #logo {
+    line-height: 75px;
+}
+#menu {
+    font-size: 110%;
+    letter-spacing: 2px;
+}
+
+#menu li {
+    float: right;
+    list-style-type: none;
+    margin-right: 75px;
+}
+
+#menu a {
+    text-decoration: none;
+    color: inherit;
+}
+
+#menu a:hover {
+    color: blue;
+    border-bottom: 1px solid #3a3a3a;
+}
