--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,20 @@ body{
     font-family: Edu NSW ACT Foundation, sans-serif;
     font-weight: 400;
     color: #3a3a3a;
+
 }
 
+/*feedback*/
+#submission{
+    background-color: black;
+    height: 100vh;
+    width: 100vw;
+}
+
+#submission h1{
+    text-align: center;
+    color: white;
+}
 
 /*headings and logo*/
 h1, h2 {
@@ -26,6 +38,7 @@ h1, h2 {
     font-size: 280%;
     text-transform: uppercase;
     margin-left: 10px;
+    color: inherit;
 }
 
 /*navigation links*/
@@ -109,7 +122,7 @@ h1, h2 {
 
 /*about us*/
 #about-us {
-    height:400px;
+    /*responsive when not specify height*/
     width:100%;
     background-color: red;
     font-size: 25px;
@@ -136,6 +149,7 @@ table {
     margin-top: 20px;
     margin-left: 20px;
 }
+
 /*sign-up*/
 #sign-up {
     background-color: black;
@@ -145,6 +159,8 @@ table {
     color: white;
 }
 .container {
-    height:400px;
+    /*responsive without specifying height*/
     width: 100%;
 }
+
+/*contact us and social links*/
