change the footer social media

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,7 +170,7 @@ table {
     text-align: center;
 }
 
-/*social links*/
+/*footer: social links*/
 
 #social-media  {
     background-color: #D2691E;
