add  some change to font-family of body

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 
 body{
     font-size:20px;
-    font-family: Edu NSW ACT Foundation, sans-serif;
+    font-family: 'Edu NSW ACT Foundation', sans-serif;
     font-weight: 400;
     color: #3a3a3a;
 
