--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body{
     font-size:20px;
     font-family: 'Edu NSW ACT Foundation', sans-serif;
     font-weight: 400;
-    color: #3a3a3a;
+    color: black;
 
 }
 
@@ -39,7 +39,7 @@ body{
 h1, h2 {
     font-family: Alkatra, sans-serif;
     letter-spacing: 2px;
-    color: #252525;
+    color: green;
 }
 
 #logo {
@@ -47,7 +47,7 @@ h1, h2 {
     font-size: 280%;
     text-transform: uppercase;
     margin-left: 10px;
-    color: #3a3a3a;
+    color: black;
 }
 
 /*navigation links*/
@@ -72,7 +72,7 @@ h1, h2 {
 
 #menu a:hover {
     color: blue;
-    border-bottom: 1px solid #3a3a3a;
+    border-bottom: 1px solid black;
 }
 
 /*my-image and image-text*/
@@ -84,7 +84,7 @@ h1, h2 {
 }
 
 #image-text, #image-text h2{
-    color: red;
+    color: white;
 }
 
 #my-image {
@@ -126,23 +126,25 @@ h1, h2 {
     margin-top: 30px;
     margin-right: 65px;
 
-    background-color: rgb(60, 60, 60, .7);
+    background-color: rgb(0,0,0,0.6);
 }
 
 /*about us*/
 #about-us {
     /*responsive when not specify height*/
     width:100%;
-    background-color: red;
+    background-color: whitesmoke;
     font-size: 25px;
 }
 
-#about-us p {
+#about-us  p {
     color: black;
+    font-weight: 600;
     
 }
 #application {
     margin-top: 20px;
+    color: black;
 }
 .center {
     text-align: center;
@@ -157,7 +159,9 @@ table, th, td {
   }
 table {
     margin-top: 20px;
-    margin-left: 20px;
+    margin-bottom: 20px;
+    margin-left: 350px;
+    float: center;
 }
 
 /*sign-up*/
