--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ h1, h2 {
     font-size: 280%;
     text-transform: uppercase;
     margin-left: 10px;
-    color: black;
+    color: yellow;
 }
 
 /*navigation links*/
@@ -165,26 +165,27 @@ table {
 }
 
 /*sign-up*/
-#sign-up {
-    
+#signup-box {
+    display: flex;
+    justify-content: center;
     background-color: black;
-    color: white;
+    width: 100%;
+    margin: auto;
 }
 #sign-up h1{
     color: white;
 }
-.container {
-    /*responsive without specifying height*/
-    width: 100%;
-    margin: auto;
-    
-}
+
 
 form label{
     display: flex;
     justify-content: center;
 }
-form
+form input{
+    display:block;
+    width: 100%;
+    height: 40px;
+}
 /*contact us and*/
  
 #contact {
@@ -198,6 +199,7 @@ footer {
     background-color: grey;
     margin-top: 50px;
 }
+
 .social{
    text-align: center;
    margin-top: 70px;
