--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     border: none;
+    box-sizing: border-box;
 }
 
 body{
@@ -47,7 +48,7 @@ h1, h2 {
     font-size: 280%;
     text-transform: uppercase;
     margin-left: 10px;
-    color: yellow;
+    color: black;
 }
 
 /*navigation links*/
@@ -166,26 +167,35 @@ table {
 
 /*sign-up*/
 #signup-box {
+    color: green;
     display: flex;
-    justify-content: center;
+    align-items: center;
     background-color: black;
-    width: 100%;
     margin: auto;
-}
-#sign-up h1{
-    color: white;
+    width:100%;
 }
 
-
-form label{
-    display: flex;
-    justify-content: center;
-}
-form input{
-    display:block;
+form {
     width: 100%;
-    height: 40px;
 }
+
+form input{
+    display: flex;
+    align-items: center;
+    height: 40px;
+    margin-top: 15px;
+    
+    width: 50%;
+}
+form label{
+    margin-left: 150px;
+}
+
+#signup-box h1{
+    color: green;
+    text-align: center;
+}
+
 /*contact us and*/
  
 #contact {
